<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ihsinformatics.interactivepaginatortable.MainActivity" >

    <!--
    <item
        android:id="@+id/action_export_patient_forms"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/action_export_patient_forms"/>
    <item
        android:id="@+id/action_export_visit_forms"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_export_visit_forms"/>
    <item
        android:id="@+id/action_export_evaluator_forms"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/action_export_evaluator_forms"/>
    -->

    <item
        android:id="@+id/action_export"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="Export">
        <menu>
            <item
                android:id="@+id/action_export_patient_forms"
                android:orderInCategory="0"
                android:showAsAction="ifRoom"
                android:title="@string/action_export_patient_forms"/>
            <item
                android:id="@+id/action_export_visit_forms"
                android:orderInCategory="1"
                android:showAsAction="ifRoom"
                android:title="@string/action_export_visit_forms"/>
            <item
                android:id="@+id/action_export_evaluator_forms"
                android:orderInCategory="2"
                android:showAsAction="ifRoom"
                android:title="@string/action_export_evaluator_forms"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_logout"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/action_exit"/>

</menu>